# pylon

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: architecture.md  development.md  handoff.md  handoff2.md  handoff3.md  handoff4.md  handshake-log.md  handshake.md  hierarchy.md  implementation-roadmap.md  log.md  mcp_implementation.md  ollama.md  packages-architecture.md  prompt_flow.md  prompt_implementation.md  prompts.md  pylon-draft-spec.md  release-management.md  spec.md  tests.md  todo.md  websocket-cleanup.md
docs/logs/20250603/: 2210-init.md  2345-log.md  2345-nip06.md
prompts/: .gitkeep  README.md  code_review.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/mcp/: capabilities.rs  clients.rs  mod.rs  protocol.rs  server.rs  types.rs
src-tauri/src/mcp/prompts/: mod.rs  provider.rs  types.rs
src-tauri/src/mcp/prompts/providers/: filesystem.rs  mod.rs
src-tauri/src/mcp/prompts/tests/: filesystem.rs  mod.rs  provider.rs  types.rs
src-tauri/src/mcp/protocol/: handlers.rs  mod.rs  tests.rs  types.rs
src-tauri/src/mcp/providers/: filesystem.rs  mod.rs  ollama.rs  roots.rs
src-tauri/src/mcp/providers/ollama/: mod.rs  provider.rs  tests.rs  types.rs
src-tauri/src/tests/: mod.rs  ollama_tests.rs
src-tauri/src/tests/mcp/: mod.rs  server_tests.rs
src-tauri/src/tests/mcp/prompts/: mod.rs
src-tauri/src/tests/mcp/providers/: filesystem_tests.rs  mod.rs
src-tauri/src/utils/: ollama.rs
src/components/: Card.module.scss  Card.tsx  ClientList.module.scss  ClientList.tsx
src/styles/: global.scss  jetbrainsmono.css
