[package]
name = "pylon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pylon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
jsonrpc-core = "18.0.0"
actix-web = "4.9.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.7.0", features = ["v4", "serde"] }